--- a/res/raw/license.html
+++ b/res/raw/license.html
@@ -1,7 +1,9 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width">
-    <style> body { font-family: sans-serif; } pre { background-color: #eeeeee; padding: 1em; white-space: pre-wrap; word-wrap: break-word; } </style>
+    <style> body { font-family: sans-serif; } pre { background-color: #eeeeee; padding: 1em;
+        white-space: pre-wrap; word-wrap: break-word; }
+    </style>
 </head>
 <body>
 <h3>GNU General Public License (GPL) version 3</h3>
